ffi/include/tav/cose.h

typedef struct TavCborValue TavCborValue;
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_map_has_text_key(
    const TavCborValue *value,
    const char *key,
    size_t key_len,
    bool *out);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_map_has_key(
    const TavCborValue *value,
    const TavCborValue *key,
    bool *out);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_map_entry_at(
    const TavCborValue *value,
    size_t index,
    TavCborValue **out_key,
    TavCborValue **out_value);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_map_key_at(
    const TavCborValue *value,
    size_t index,
    TavCborValue **out_key);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_map_value_at(
    const TavCborValue *value,
    size_t index,
    TavCborValue **out_value);
TAV_COSE_API TavError *tav_validate_cose_sign1(
    const TavCborValue *value,
    TavCborValue **out_sign1);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API void tav_cbor_value_free(TavCborValue *value);
TAV_COSE_API TavError *tav_verify_cose_sign1_embedded(
    const TavCborValue *sign1,
    const uint8_t *spki_der,
    size_t spki_der_len,
    int32_t cose_alg);
TAV_COSE_API TavError *tav_verify_cose_sign1_detached(
    const TavCborValue *sign1,
    const uint8_t *payload,
    size_t payload_len,
    const uint8_t *spki_der,
    size_t spki_der_len,
    int32_t cose_alg);