wrappers/dotnet/TeeAttestationVerification/NativeMethods.cs


    [LibraryImport(LibraryName, EntryPoint = "tav_cbor_value_map_has_text_key")]
    internal static partial IntPtr CborMapHasText(
        IntPtr value, IntPtr key, nuint keyLength, out byte result);

    [LibraryImport(LibraryName, EntryPoint = "tav_cbor_value_map_has_key")]
    internal static partial IntPtr CborMapHas(
        IntPtr value, IntPtr key, out byte result);

    [LibraryImport(LibraryName, EntryPoint = "tav_cbor_value_map_entry_at")]
    internal static partial IntPtr CborMapEntryAt(
        IntPtr value, nuint index, out IntPtr key, out IntPtr child);

    [LibraryImport(LibraryName, EntryPoint = "tav_cbor_value_map_key_at")]
    internal static partial IntPtr CborMapKeyAt(
        IntPtr value, nuint index, out IntPtr key);

    [LibraryImport(LibraryName, EntryPoint = "tav_cbor_value_map_value_at")]
    internal static partial IntPtr CborMapValueAt(
        IntPtr value, nuint index, out IntPtr child);

    [LibraryImport(LibraryName, EntryPoint = "tav_validate_cose_sign1")]
    internal static partial IntPtr ValidateCoseSign1(
        IntPtr value, out IntPtr sign1);

    [LibraryImport(LibraryName, EntryPoint = "tav_cbor_value_free")]
    internal static partial void CborFree(IntPtr value);

    [LibraryImport(LibraryName, EntryPoint = "tav_verify_cose_sign1_embedded")]
    internal static partial IntPtr VerifyCoseSign1Embedded(
        IntPtr sign1, IntPtr spkiDer, nuint spkiDerLength, int coseAlgorithm);

    [LibraryImport(LibraryName, EntryPoint = "tav_verify_cose_sign1_detached")]
    internal static partial IntPtr VerifyCoseSign1Detached(
        IntPtr sign1,
        IntPtr payload,
        nuint payloadLength,
        IntPtr spkiDer,
        nuint spkiDerLength,
        int coseAlgorithm);

    [LibraryImport(LibraryName, EntryPoint = "tav_verify_caci_uvm_endorsement")]
    internal static partial IntPtr VerifyCaciUvmEndorsement(
        IntPtr uvmEndorsement,
        nuint uvmEndorsementLength,
        IntPtr trustedDidX509,
        nuint trustedDidX509Length,
        out IntPtr value);

    [LibraryImport(LibraryName, EntryPoint = "tav_verify_caci_attestation")]
    internal static partial IntPtr VerifyCaciAttestation(
        IntPtr attestation,
        IntPtr minimumTcbCpuids,
        IntPtr minimumTcbValues,
        nuint minimumTcbCount,
        IntPtr trustedPolicyDigests,
        nuint trustedPolicyDigestCount,
        IntPtr uvmEndorsement,
        IntPtr uvmFeed,
        nuint uvmFeedLength,
        ulong minimumSvn,
        out IntPtr reportData);
}
